--- a/index.html
+++ b/index.html
@@ -1,18 +1,16 @@
 <!doctype html>
-<html lang='en'>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/png" href="/src/assets/summer.png" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="manifest" href="/manifest.json" />
+    <title>Home Management</title>
+  </head>
 
-<head>
-  <meta charset='UTF-8' />
-  <link rel='icon' type='image/png' href='/src/assets/summer.png' />
-  <meta name='viewport' content='width=device-width, initial-scale=1.0' />
-  <link rel="manifest" href="/manifest.json" />
-  <title>Home Management</title>
-</head>
-
-<body>
-  <div id='modal-root'></div>
-  <div id='root'></div>
-  <script type='module' src='/src/main'></script>
-</body>
-
+  <body>
+    <div id="modal-root"></div>
+    <div id="root"></div>
+    <script type="module" src="/src/main"></script>
+  </body>
 </html>
